--- a/views/passwordlost1.hbs
+++ b/views/passwordlost1.hbs
@@ -31,37 +31,19 @@
 				<form action="/" method="post">
 					<div class="input-group form-group">
 						<div class="input-group-prepend">
-							<span class="input-group-text"><i class="fas fa-user"></i></span>
+							<span class="input-group-text"><i class="fas fa-envelope"></i></span>
 						</div>
 						<input name="email" type="text" class="form-control" placeholder="email">
 						
 					</div>
-					<div class="input-group form-group">
-						<div class="input-group-prepend">
-							<span class="input-group-text"><i class="fas fa-key"></i></span>
-						</div>
-						<input name="password" type="password" class="form-control" placeholder="contraseña">
-					</div>
-					<div class="row align-items-center remember" id="recordarme" >
-						<input type="checkbox">Recordarme
-					</div>
-					<div class="form-group" id="login" >
-						<input type="submit" value="Login" class="btn float-mid login_btn" id="log">
+			
+					<div class="form-group" id="resetear contraseña" >
+						<input type="submit" value="resetear contraseña" class="btn float-mid login_btn" id="log">
 					</div>
 				</form>
 			</div>
 			<div class="card-footer" id="he">
-				{{#if error}}
-				<div class="alert alert-danger" role="alert">
-					{{error}}
-				</div>
-				{{/if}}
-				<div class="d-flex justify-content-center links">
-					No tienes cuenta?  <a href="registro">  Registrarse</a>
-				</div>
-				<div class="d-flex justify-content-center">
-					<a href="passwordlost">Has olvidado tu contraseña?</a>
-				</div>
+			
 			</div>
 		</div>
 	</div>
