--- a/views/pedido-form.hbs
+++ b/views/pedido-form.hbs
@@ -3,21 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{{title}}</title>
+    <!-- CSS -->
+   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous"
+    
+    <title>{{title}}</title>
 </head>
 <body>
-    <form action="/pedidos/nuevo" method="post">
-        <label for="cantidad">Cantidad</label>
-        <input type="number" name="cantidad">
+    <div class="container">
+        <header class="jumbotron">
+            <!-- Logo -->
+            <img src="img/Logo.png" alt="Logo">
+        </header>
 
-        <label for="farmaco">Selecciona el fármaco</label>
-        <select name="farmaco">
-             {{#each farmaco}}
-                <option value="{{nombre}}">{{nombre}}</option>
-             {{/each}}
-        </select>
+        <section>
+            <!--Fármacos selecionados-->
+            <table>
+                <thead>
+                    <tr>
+                        <td>Cantidad</td>
+                        <td>Fármaco</td>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
 
-        <input type="submit" value="Hacer pedido">
-    </form>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+    
+        <!--Formulario para añadir fármacos al nuevo pedido-->
+        <section class="container">
+            <form action="/pedidos/nuevo/:id" method="post">
+                <div>
+                    <label for="cantidad" class="sr-only">Cantidad</label>
+                    <input type="number" name="cantidad" id="cantidad" max="5">
+                </div>
+                <div>
+                    <label for="farmaco">Fármaco</label>
+                     <select name="farmaco">
+                        {{#each farmaco}}
+                            <option value="{{nombre}}">{{nombre}}</option>
+                        {{/each}}
+                    </select>
+                </div>
+                <button type="submit">Añadir al carro</button>
+            </form>
+    
+            <form action="/pedidos/nuevo/:id/realizar" method="POST">
+                <button type="submit">Realizar pedido</button>
+            </form>
+        </section>
+    </div>
+    
 </body>
 </html>
