--- a/views/pedido-lista.hbs
+++ b/views/pedido-lista.hbs
@@ -3,27 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{{title}}</title>
+
+    <!-- CSS -->
+   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    
+    <title>{{title}}</title>
 </head>
 <body>
-    <h1>Lista de pedidos</h1>
-    <table>
-        <thead>
-            <tr>
-                <td>ID</td>
-                <td>Fecha</td>
-                <td>Estado</td>
-            </tr>
-        </thead>
-        <tbody>
-          <--  {{#each usuarios}}
+
+    <center>
+        <header class="jumbotron">
+            <h1>Lista de pedidos</h1>
+        </header>
+        
+        <table class="table">
+            <thead class="thead-dark">
                 <tr>
-                    <td>{{id}}</td>
-                    <td>{{fecha}}</td>
-                    <td>{{estado}}</td>
+                    <td scope="col">ID</td>
+                    <td scope="col">Fecha</td>
+                    <td scope="col">Estado</td>
                 </tr>
-             {{/each}}
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+                {{#each usuarios}}
+                    <tr scope="row">
+                        <td>{{id}}</td>
+                        <td>{{fecha}}</td>
+                        <td>{{estado}}</td>
+                    </tr>
+                 {{/each}}
+            </tbody>
+        </table>
+
+        <form action="/pedido/nuevo">
+            <input type="submit" value="Nuevo pedido" class="btn btn-primary">
+        </form>
+    </center>
 </body>
 </html>
