--- a/views/pedido-lista.hbs
+++ b/views/pedido-lista.hbs
@@ -7,37 +7,39 @@
     <!-- CSS -->
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     
-    <title>{{title}}</title>
+    <title>Cliente: Lista de pedidos</title>
 </head>
 <body>
-
-    <center>
-        <header class="jumbotron">
-            <h1>Lista de pedidos</h1>
-        </header>
-        
-        <table class="table">
-            <thead class="thead-dark">
-                <tr>
-                    <td scope="col">ID</td>
-                    <td scope="col">Fecha</td>
-                    <td scope="col">Estado</td>
-                </tr>
-            </thead>
-            <tbody>
-                {{#each usuarios}}
-                    <tr scope="row">
-                        <td>{{id}}</td>
-                        <td>{{fecha}}</td>
-                        <td>{{estado}}</td>
+<div class="container">
+    
+        <center>
+            <header class="jumbotron">
+                <h1>Lista de pedidos</h1>
+            </header>
+    
+            <table class="table">
+                <thead class="thead-dark">
+                    <tr>
+                        <td scope="col">ID</td>
+                        <td scope="col">Fecha</td>
+                        <td scope="col">Estado</td>
                     </tr>
-                 {{/each}}
-            </tbody>
-        </table>
-
-        <form action="/pedido/nuevo">
-            <input type="submit" value="Nuevo pedido" class="btn btn-primary">
-        </form>
-    </center>
+                </thead>
+                <tbody>
+                    {{#each pedidos}}
+                        <tr scope="row">
+                            <td>{{id}}</td>
+                            <td>{{Fecha}}</td>
+                            <td>{{Estado}}</td>
+                        </tr>
+                     {{/each}}
+                </tbody>
+            </table>
+    
+            <form action="/nuevo" method="POST">
+                <input type="submit" value="Nuevo pedido" class="btn btn-primary">
+            </form>
+        </center>
+</div>
 </body>
 </html>
