--- a/views/pedido-lista.hbs
+++ b/views/pedido-lista.hbs
@@ -7,8 +7,8 @@
 </head>
 <body>
     {{#with usuario}}
-    <h2>Nombre: {{nombre}}</h2>
-    <h3>Ap: {{apellidos}}</h3>
+    <h2>Nombre: {{nombre}} + {{apellidos}} </h2>
+    
     {{/with}}
 </body>
 </html>
