--- a/views/pedido-lista.hbs
+++ b/views/pedido-lista.hbs
@@ -13,7 +13,8 @@
 <div class="container">
     
         <center>
-            <header class="jumbotron">
+            <header class="jumbotron inline-flex">
+                <img src="../public/images/logo.PNG" alt="Logo">
                 <h1>Lista de pedidos</h1>
             </header>
     
