--- a/views/pedido-form.hbs
+++ b/views/pedido-form.hbs
@@ -4,55 +4,69 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS -->
-   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous"
+   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     
-    <title>{{title}}</title>
+    <title>Nuevo pedido</title>
 </head>
 <body>
     <div class="container">
         <header class="jumbotron">
             <!-- Logo -->
-            <img src="img/Logo.png" alt="Logo">
+           <img src="../public/images/logo.PNG" alt="Logo">
+           <h1>Nuevo pedido</h1>
         </header>
 
         <section>
             <!--Fármacos selecionados-->
-            <table>
-                <thead>
+            <table class="table">
+                <thead class="thead-dark">
                     <tr>
-                        <td>Cantidad</td>
-                        <td>Fármaco</td>
+                        <td scope="col">Cantidad</td>
+                        <td scope="col">Fármaco</td>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-
-                    </tr>
+                    {{#each pedido.farmaco}}
+                        <tr scope="row">
+                            <td>{{id}}</td>
+                            <td>{{Fecha}}</td>
+                            <td>{{Estado}}</td>
+                        </tr>
+                     {{/each}}
                 </tbody>
             </table>
         </section>
     
         <!--Formulario para añadir fármacos al nuevo pedido-->
         <section class="container">
-            <form action="/pedidos/nuevo/:id" method="post">
-                <div>
-                    <label for="cantidad" class="sr-only">Cantidad</label>
-                    <input type="number" name="cantidad" id="cantidad" max="5">
-                </div>
-                <div>
-                    <label for="farmaco">Fármaco</label>
-                     <select name="farmaco">
-                        {{#each farmaco}}
-                            <option value="{{nombre}}">{{nombre}}</option>
-                        {{/each}}
-                    </select>
-                </div>
-                <button type="submit">Añadir al carro</button>
-            </form>
-    
-            <form action="/pedidos/nuevo/:id/realizar" method="POST">
-                <button type="submit">Realizar pedido</button>
-            </form>
+            <center>
+                <form action="/pedidos/nuevo/:id" method="post" class="form-inline>
+                    <div class="form-row align-items-center">
+                        <div class="col-auto">
+                            <label for="cantidad" >Cantidad</label>
+                            <input type="number" name="cantidad" id="cantidad" max="5" class="form-control mb-2">
+                        </div>
+                        <div class="col-auto">
+                            <label for="farmaco">Fármaco</label>
+                             <select name="farmaco" class="form-control mb-2">
+                                {{#each farmaco}}
+                                    <option value="{{nombre}}">{{nombre}}</option>
+                                {{/each}}
+                            </select>
+                        </div>
+                        <div class="col-auto">
+                            <input type="submit" class="btn btn-primary mb-2" value="Añadir">
+                        </div>
+                    </div>
+                </form>
+        </center>
+
+                <center>
+                    <form action="/pedidos/nuevo/:id/realizar" method="POST">
+                        <input type="submit" class="btn btn-primary" value="Confirmar pedido">
+                    </form>
+                </center>
+            
         </section>
     </div>
     
