--- a/views/pedido-lista.hbs
+++ b/views/pedido-lista.hbs
@@ -37,7 +37,7 @@
                 </tbody>
             </table>
     
-            <form action="/nuevo" method="POST">
+            <form action="/pedidos/nuevo" method="POST">
                 <input type="submit" value="Nuevo pedido" class="btn btn-primary">
             </form>
         </center>
