--- a/views/pedido-lista.hbs
+++ b/views/pedido-lista.hbs
@@ -3,12 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <!-- CSS -->
+   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    
+    <title>Cliente: Lista de pedidos</title>
 </head>
 <body>
-    {{#with usuario}}
-    <h2>Nombre: {{nombre}} + {{apellidos}} </h2>
+<div class="container">
     
-    {{/with}}
+        <center>
+            <header class="jumbotron inline-flex">
+                <img src="../public/images/logo.PNG" alt="Logo">
+                <h1>Lista de pedidos</h1>
+            </header>
+    
+            <table class="table">
+                <thead class="thead-dark">
+                    <tr>
+                        <td scope="col">ID</td>
+                        <td scope="col">Fecha</td>
+                        <td scope="col">Estado</td>
+                    </tr>
+                </thead>
+                <tbody>
+                    {{#each pedidos}}
+                        <tr scope="row">
+                            <td>{{id}}</td>
+                            <td>{{Fecha}}</td>
+                            <td>{{Estado}}</td>
+                        </tr>
+                     {{/each}}
+                </tbody>
+            </table>
+    
+            <form action="/users/{{usuario.id}}/nuevo-pedido" method="POST">
+                <input type="submit" value="Nuevo pedido" class="btn btn-primary">
+            </form>
+        </center>
+</div>
 </body>
 </html>
