--- a/views/pedido-form.hbs
+++ b/views/pedido-form.hbs
@@ -61,7 +61,7 @@
         </center>
 
                 <center>
-                    <form action="/pedidos/nuevo/:id/realizar" method="POST">
+                    <form action="/users/{{usuario.id}}/nuevo-pedido/{{pedido.id}}/checkout" method="POST">
                         <input type="submit" class="btn btn-primary" value="Confirmar pedido">
                     </form>
                 </center>
