--- a/views/pedido-form.hbs
+++ b/views/pedido-form.hbs
@@ -5,15 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS -->
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    
+    <style>
+        #jumb {background-color: white; margin-left: 3cm;}
+        #añadir {margin-top: 0.625cm;}
+        #conf {margin-bottom: 10cm; margin-left: 0.3cm; margin-top: -1.225cm;}
+        #p {margin-left:7.2cm}
+    </style>
     <title>Nuevo pedido</title>
 </head>
 <body>
     <div class="container">
-        <header class="jumbotron">
+        <header class="jumbotron" id="jumb">
             <!-- Logo -->
-           <img src="../public/images/logo.PNG" alt="Logo">
-           <h1>Nuevo pedido</h1>
+           <img src="/images/logo.PNG" id="foto">
+           <h1  id="p">Nuevo pedido</h1>
         </header>
 
         <section>
@@ -53,16 +58,16 @@
                                 {{/each}}
                             </select>
                         </div>
-                        <div class="col-auto">
+                        <div class="col-auto" id="añadir">
                             <input type="submit" class="btn btn-primary mb-2" value="Añadir">
                         </div>
                     </div>
                 </form>
         </center>
 
-                <center>
-                    <form action="/users/{{usuario.id}}/nuevo-pedido/{{pedido.id}}/checkout" method="POST">
-                        <input type="submit" class="btn btn-primary" value="Confirmar pedido">
+                <center >
+                    <form action="/users/{{usuario.id}}/nuevo-pedido/{{pedido.id}}/checkout" method="POST" >
+                        <input type="submit" class="btn btn-primary" value="Confirmar pedido" id="conf">
                     </form>
                 </center>
             
