--- a/views/pedido-lista.hbs
+++ b/views/pedido-lista.hbs
@@ -8,19 +8,27 @@
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     
     <title>Cliente: Lista de pedidos</title>
+
+    <style>
+
+        .body {margin-right: 2cm;}
+        #foto {margin-right: 0.5cm;}
+        #tr {margin-bottom: 5cm;}
+        #jumb {background-color: white; margin-bottom: 2cm;}
+    </style>
 </head>
 <body>
 <div class="container">
     
         <center>
-            <header class="jumbotron inline-flex">
-                <img src="../public/images/logo.PNG" alt="Logo">
+            <header class="jumbotron inline-flex" id="jumb">
+                <img src="/images/logo.PNG" id="foto">
                 <h1>Lista de pedidos</h1>
             </header>
     
             <table class="table">
                 <thead class="thead-dark">
-                    <tr>
+                    <tr id="tr">
                         <td scope="col">ID</td>
                         <td scope="col">Fecha</td>
                         <td scope="col">Estado</td>
