--- a/views/pedido-form.hbs
+++ b/views/pedido-form.hbs
@@ -10,14 +10,20 @@
         #añadir {margin-top: 0.625cm;}
         #conf {margin-bottom: 10cm; margin-left: 0.3cm; margin-top: -1.225cm;}
         #p {margin-left:7.2cm}
+        #foto2 {width: 50px; height: 25px; margin-bottom: 0.2cm; background-color: white; color: white;}
+        #hh {background-color: white; color: white; margin-left: 47.5cm; margin-top: 0.38cm;}
+        .container {margin-top: -4.4cm}
+        #pepe {margin-top: 5cm;}
     </style>
     <title>Nuevo pedido</title>
 </head>
 <body>
+    <a  class="btn btn-sm" href="/logout"  id="hh" role="button"><img src="/images/logout.PNG" id="foto2"></a>
     <div class="container">
         <header class="jumbotron" id="jumb">
             <!-- Logo -->
            <img src="/images/logo.PNG" id="foto">
+           
            <h1  id="p">Nuevo pedido</h1>
         </header>
 
@@ -44,7 +50,7 @@
         <!--Formulario para añadir fármacos al nuevo pedido-->
         <section class="container">
             <center>
-                <form action="" method="post" class="form-inline">
+                <form action="" method="post" class="form-inline" id="pepe">
                     <div class="form-row align-items-center">
                         <div class="col-auto">
                             <label for="cantidad" >Cantidad</label>
