--- a/views/pedido-lista.hbs
+++ b/views/pedido-lista.hbs
@@ -1,77 +1,195 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- CSS -->
-   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
     <title>Cliente: Lista de pedidos</title>
 
     <style>
+        .body {
+            margin-right: 2cm;
+        }
 
-        .body {margin-right: 2cm;}
-        #foto {margin-right: 0.5cm;}
-        #tr {margin-bottom: 5cm;}
-        #jumb {background-color: white; margin-bottom: 2cm;}
-        #foto2 {width: 50px; height: 25px; margin-bottom: 0.2cm; background-color: white; color: white;}
-        #pedido {background-color: #0CC5AA; color: white; margin-top: 1cm;}
-        #hh {background-color: white; color: white; margin-left: 37cm; margin-top: -22cm}
-        .container {margin-top: -3.1cm}
-        .table {margin-top: -3cm;}
+        #foto {
+            margin-right: 0.5cm;
+        }
+
+        #tr {
+            margin-bottom: 5cm;
+        }
+
+        #jumb {
+            background-color: white;
+            margin-bottom: 2cm;
+        }
+
+        #foto2 {
+            width: 40px;
+            height: 35px;
+            margin-bottom: 0.2cm;
+            background-color: white;
+            color: white;
+        }
+
+        #pedido {
+            background-color: #0CC5AA;
+            color: white;
+            margin-top: 1cm;
+        }
+
+        #hh {
+            background-color: white;
+            color: white;
+            margin-left: 37cm;
+            margin-top: -22cm
+        }
+
+        .container {
+            margin-top: -3.1cm
+        }
+
+        .table {
+            margin-top: -3cm;
+        }
+
         .my-custom-scrollbar {
-        position: relative;
-        height: 445px;
-        overflow: auto;
-    
+            position: relative;
+            height: 445px;
+            overflow: auto;
+
         }
+
         .table-wrapper-scroll-y {
-        display: block;
+            display: block;
         }
-        #pep {margin-top: 0.05cm}
-        #sub {margin-top: -3.5cm;}
-    
+
+        #pep {
+            margin-top: 0.05cm
+        }
+
+        #sub {
+            margin-top: -3.5cm;
+        }
     </style>
 </head>
+
 <body>
-<div class="container">
-    
+    <div class="container">
+
         <center>
             <header class="jumbotron inline-flex" id="jumb">
                 <img src="/images/logo.PNG" id="foto">
                 <h1>Lista de pedidos</h1>
             </header>
-            <a  class="btn btn-sm" href="/logout"  id="hh" role="button"><img src="/images/logout.PNG" id="foto2"></a>
+            <a class="btn btn-sm" href="/logout" id="hh" role="button"><img src="/images/logout.PNG" id="foto2"></a>
+            {{#if cliente}}
+            <div class="table-wrapper-scroll-y my-custom-scrollbar" id="sub">
 
-           <div class="table-wrapper-scroll-y my-custom-scrollbar" id="sub">
-
-            <table class="table table-bordered table-striped mb-0" id="pep">
-                <thead>
-                <tr>
-                    <th scope="col">ID</th>
-                    <th scope="col">Fecha</th>
-                    <th scope="col">Estado</th>
-                </tr>
-                </thead>
-                <tbody>
-                    {{#each usuario.Pedidos}}
+                <table class="table table-bordered table-striped mb-0" id="pep">
+                    <thead>
+                        <tr>
+                            <th scope="col">ID</th>
+                            <th scope="col">Fecha</th>
+                            <th scope="col">Estado</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {{#each usuario.Pedidos}}
 
                         <tr scope="row">
                             <td>{{id}}</td>
                             <td>{{createdAt}}</td>
                             <td>{{Estado}}</td>
                         </tr>
-                     {{/each}}
-                </tbody>
-            </table>
+                        {{/each}}
+                    </tbody>
+                </table>
             </div>
 
-    
+
             <form action="/users/{{usuario.id}}/nuevo-pedido" method="POST">
                 <input type="submit" value="Nuevo pedido" class="btn float-mid login_btn" id="pedido">
             </form>
+            {{/if}}
+
+
+
+            {{#if admin}}
+            <div class="table-wrapper-scroll-y my-custom-scrollbar" id="sub">
+
+                <table class="table table-bordered table-striped mb-0" id="pep">
+                    <thead>
+                        <tr>
+                            <th scope="col">ID</th>
+                            <th scope="col">Fecha</th>
+                            <th scope="col">Estado</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {{#each Pedidos1}}
+
+                        <tr scope="row">
+                            <td>{{id}}</td>
+                            <td>{{createdAt}}</td>
+                            <td>{{Estado}}</td>
+                        </tr>
+                        {{/each}}
+                    </tbody>
+                </table>
+            </div>
+
+
+            <form action="/registrogestor" method="GET">
+                <input type="submit" value="Alta gestor" class="btn float-mid login_btn" id="pedido">
+            </form>
+
+
+            {{/if}}
+
+
+
+
+            {{#if gestor}}
+    
+            <div class="table-wrapper-scroll-y my-custom-scrollbar" id="sub">
+
+                <table class="table table-bordered table-striped mb-0" id="pep">
+                    <thead>
+                        <tr>
+                            <th scope="col">ID</th>
+                            <th scope="col">Fecha</th>
+                            <th scope="col">Estado</th>
+                            <th scope="col">&nbsp&nbsp&nbsp&nbsp&nbsp <strong>#</strong></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {{#each Pedidos}}
+
+                        <tr scope="row">
+                            <td>{{id}}</td>
+                            <td>{{createdAt}}</td>
+                            <td>{{Estado}}</td>
+                            <td><form action="/envio/{{id}}" method="post"><div class="form-group"><input type="hidden" name="id" value="{{id}}">
+						<input type="submit" value="☑" class="btn float-middle login_btn" id="log">
+					</div></form></td>
+                        </tr>
+                        {{/each}}
+                    </tbody>
+                </table>
+            </div>
+
+
+
+            {{/if}}
         </center>
-</div>
+
+    </div>
 </body>
+
 </html>
